--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body class="body">
 
-    <header class="header-section">
+    <header class="header-page">
 
         <div class="container header-container">
 
@@ -39,28 +39,36 @@
 
             </nav>
 
+            <button class="mobile-open-btn" type="button">
+                <svg class="mobile-open-btn-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-burger"></use>
+                </svg>
+            </button>
+
             <address class="adrress-info">
                 <ul class="address-menu">
-                    <li class="contact-item"><a class="contact-information"
+                    <li class="contact-item email"><a class="contact-information"
                             href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
                     <li class="contact-item"><a class="contact-information" href="tel:+110001111111">+11 (000)
                             111-11-11</a></li>
                 </ul>
             </address>
+
+
         </div>
     </header>
 
     <main>
 
-        <section class="hero-section">
+        <!-- <section class="hero-section">
             <div class="container">
                 <h1 class="main-title">Effective Solutions for Your Business</h1>
                 <button class="order-service-button" type="button">Order Service</button>
             </div>
-        </section>
+        </section> -->
 
-        <section class="advantage-section">
+        <!-- <section class="advantage-section">
             <div class="advantage-container container">
                 <h2 class="visually-hidden">h2</h2>
                 <ul class="advantage-list">
@@ -124,9 +132,9 @@
                 </ul>
             </div>
 
-        </section>
+        </section> -->
 
-        <section class="team">
+        <!-- <section class="team">
             <div class="team-container container">
                 <h2 class="team-title">
                     Our Team
@@ -295,9 +303,9 @@
                 </ul>
             </div>
 
-        </section>
+        </section> -->
 
-        <section class="portfolio-section">
+        <!-- <section class="portfolio-section">
             <div class="container">
                 <h2 class="portfolio-title">
                     Our Portfolio
@@ -418,11 +426,11 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
 
     </main>
 
-    <footer class="footer-section">
+    <!-- <footer class="footer-section">
         <div class="container footer-container">
 
             <div class="footer-left-part">
@@ -492,8 +500,8 @@
 
 
         </div>
-    </footer>
-
+    </footer> -->
+    <!-- 
     <div class="modal-bg">
 
         <div class="modal-window">
@@ -574,7 +582,97 @@
 
         </div>
 
+    </div> -->
+
+
+
+    <!-- MOBILE MENU START -->
+    <div class="mobile-menu">
+
+
+        <div class=" container mobile-menu-container">
+
+
+            <button class="mobile-close-btn">
+                <svg class="mobile-menu-icon" width="8" height="8">
+                    <use href="./images/icons.svg#icon-mobile-close"></use>
+                </svg>
+            </button>
+
+
+
+            <nav class="mobile-menu-nav">
+                <ul class="mobile-menu-list">
+                    <li class="mobile-menu-item">
+                        <a href="" class="mobile-menu-link">Studio</a>
+                    </li>
+                    <li class="mobile-menu-item">
+                        <a href="" class="mobile-menu-link">Portfolio</a>
+                    </li>
+                    <li class="mobile-menu-item">
+                        <a href="" class="mobile-menu-link">Contacts</a>
+                    </li>
+                </ul>
+            </nav>
+
+
+
+
+            <div class="mobile-info">
+
+                <address class="mobile-adrress-info">
+                    <ul class="mobile-address-menu">
+                        <li class="mobile-contact-item"><a class="mobile-contact-information-link"
+                                href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        </li>
+                        <li class="mobile-contact-item"><a class="mobile-contact-information-link"
+                                href="tel:+110001111111">+11
+                                (000)
+                                111-11-11</a></li>
+                    </ul>
+                </address>
+
+                <ul class="mobile-social-link-menu">
+                    <li class="mobile-social-link-items">
+                        <a class="mobile-social-link" href="">
+                            <svg class="mobile-social-icons" width="24" height="24">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="mobile-social-link-items">
+                        <a class="mobile-social-link" href="">
+                            <svg class="mobile-social-icons" width="24" height="24">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="mobile-social-link-items">
+                        <a class="mobile-social-link" href="">
+                            <svg class="mobile-social-icons" width="24" height="24">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="mobile-social-link-items">
+                        <a class="mobile-social-link" href="">
+                            <svg class="mobile-social-icons" width="24" height="24">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+
+            </div>
+
+
+        </div>
+
+
+
     </div>
+
+    <!-- MOBILE MENU END -->
 
 </body>
 
