hero-section update

--- a/index.html
+++ b/index.html
@@ -55,18 +55,19 @@
                 </ul>
             </address>
 
-
         </div>
+
     </header>
+
 
     <main>
 
-        <!-- <section class="hero-section">
-            <div class="container">
+        <section class="hero-section">
+            <div class="container hero-container">
                 <h1 class="main-title">Effective Solutions for Your Business</h1>
                 <button class="order-service-button" type="button">Order Service</button>
             </div>
-        </section> -->
+        </section>
 
         <!-- <section class="advantage-section">
             <div class="advantage-container container">
