advantages section done

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
         </section>
 
-        <!-- <section class="advantage-section">
+        <section class="advantage-section">
             <div class="advantage-container container">
                 <h2 class="visually-hidden">h2</h2>
                 <ul class="advantage-list">
@@ -133,7 +133,7 @@
                 </ul>
             </div>
 
-        </section> -->
+        </section>
 
         <!-- <section class="team">
             <div class="team-container container">
