--- a/index.html
+++ b/index.html
@@ -135,14 +135,15 @@
 
         </section>
 
-        <!-- <section class="team">
+        <section class="team">
             <div class="team-container container">
                 <h2 class="team-title">
                     Our Team
                 </h2>
                 <ul class="team-description">
                     <li class="team-field">
-                        <img class="team-img" src="./images/img1.jpg" alt="Product Designer" width="264">
+                        <img class="team-img" srcset="./images/img1@2x.jpg 2x" src="./images/img1.jpg"
+                            alt="Product Designer" width="264">
                         <div class="team-info">
                             <h3 class="team-name">Mark Guerrero</h3>
                             <p class="team-position">Product Designer</p>
@@ -182,7 +183,8 @@
                     </li>
 
                     <li class="team-field">
-                        <img class="team-img" src="./images/img2.jpg" alt="Frontend Developer" width="264">
+                        <img class="team-img" srcset="./images/img2@2x.jpg 2x" src="./images/img2.jpg"
+                            alt="Frontend Developer" width="264">
                         <div class="team-info">
                             <h3 class="team-name">Tom Ford</h3>
                             <p class="team-position">Frontend Developer</p>
@@ -222,7 +224,8 @@
 
                     </li>
                     <li class="team-field">
-                        <img class="team-img" src="./images/img3.jpg" alt="Marketing" width="264">
+                        <img class="team-img" srcset="./images/img3@2x.jpg 2x" src="./images/img3.jpg" alt="Marketing"
+                            width="264">
                         <div class="team-info">
                             <h3 class="team-name">Camila Garcia</h3>
                             <p class="team-position">Marketing</p>
@@ -262,7 +265,8 @@
 
                     </li>
                     <li class="team-field">
-                        <img class="team-img" src="./images/img4.jpg" alt="UI Designer" width="264">
+                        <img class="team-img" srcset="./images/img4@2x.jpg 2x" src="./images/img4.jpg" alt="UI Designer"
+                            width="264">
                         <div class="team-info">
                             <h3 class="team-name">Daniel Wilson</h3>
                             <p class="team-position">UI Designer</p>
@@ -304,7 +308,7 @@
                 </ul>
             </div>
 
-        </section> -->
+        </section>
 
         <!-- <section class="portfolio-section">
             <div class="container">
