--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <ul class="team-description">
                     <li class="team-field">
                         <img class="team-img" srcset="./images/img1@2x.jpg 2x" src="./images/img1.jpg"
-                            alt="Product Designer" width="264">
+                            alt="Product Designer">
                         <div class="team-info">
                             <h3 class="team-name">Mark Guerrero</h3>
                             <p class="team-position">Product Designer</p>
@@ -184,7 +184,7 @@
 
                     <li class="team-field">
                         <img class="team-img" srcset="./images/img2@2x.jpg 2x" src="./images/img2.jpg"
-                            alt="Frontend Developer" width="264">
+                            alt="Frontend Developer">
                         <div class="team-info">
                             <h3 class="team-name">Tom Ford</h3>
                             <p class="team-position">Frontend Developer</p>
@@ -224,8 +224,7 @@
 
                     </li>
                     <li class="team-field">
-                        <img class="team-img" srcset="./images/img3@2x.jpg 2x" src="./images/img3.jpg" alt="Marketing"
-                            width="264">
+                        <img class="team-img" srcset="./images/img3@2x.jpg 2x" src="./images/img3.jpg" alt="Marketing">
                         <div class="team-info">
                             <h3 class="team-name">Camila Garcia</h3>
                             <p class="team-position">Marketing</p>
@@ -265,8 +264,8 @@
 
                     </li>
                     <li class="team-field">
-                        <img class="team-img" srcset="./images/img4@2x.jpg 2x" src="./images/img4.jpg" alt="UI Designer"
-                            width="264">
+                        <img class="team-img" srcset="./images/img4@2x.jpg 2x" src="./images/img4.jpg"
+                            alt="UI Designer">
                         <div class="team-info">
                             <h3 class="team-name">Daniel Wilson</h3>
                             <p class="team-position">UI Designer</p>
@@ -310,17 +309,24 @@
 
         </section>
 
-        <!-- <section class="portfolio-section">
+        <section class="portfolio-section">
             <div class="container">
+
                 <h2 class="portfolio-title">
                     Our Portfolio
                 </h2>
+
                 <ul class="portfolio-list">
-
-
                     <li class="portfolio-four-sec">
                         <div class="overlay-card">
-                            <img class="portfolio-img" src="./images/banking-app.jpg" alt="Banking App" width="360">
+                            <img class="portfolio-img" srcset="./images/mobile-banking-app.jpg 288w, 
+                                    ./images/tablet-banking-app.jpg 356w, 
+                                    ./images/desktop-banking-app.jpg 360w, 
+                                    ./images/mobile-banking-app@2x.jpg 576w, 
+                                    ./images/tablet-banking-app@2x.jpg 712w, 
+                                    ./images/desktop-banking-app@2x.jpg 720w" src=" ./images/mobile-banking-app.jpg"
+                                alt="Banking App"
+                                sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px">
                             <p class="overlay">
                                 14 Stylish and User-Friendly App Design Concepts · Task Manager App
                                 · Calorie Tracker App
@@ -333,12 +339,18 @@
                             <h3 class="portfolio-info">Banking App</h3>
                             <p class="portfolio-type">App</p>
                         </div>
-
                     </li>
+
                     <li class="portfolio-four-sec">
                         <div class="overlay-card">
-                            <img class="portfolio-img" src="./images/cashless-payment.jpg" alt="Cashless Payment"
-                                width="360">
+                            <img class="portfolio-img" srcset="./images/mobile-cashless-payment.jpg 288w, 
+                                    ./images/tablet-cashless-payment.jpg 356w, 
+                                    ./images/desktop-cashless-payment.jpg 360w, 
+                                    ./images/mobile-cashless-payment@2x.jpg 576w, 
+                                    ./images/tablet-cashless-payment@2x.jpg 712w, 
+                                    ./images/desktop-cashless-payment@2x.jpg 720w"
+                                src="./images/mobile-cashless-payment.jpg" alt="Cashless Payment"
+                                sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px">
                             <p class="overlay">
                                 14 Stylish and User-Friendly App Design Concepts · Task Manager App
                                 · Calorie Tracker App
@@ -352,12 +364,18 @@
                             <h3 class="portfolio-info">Cashless Payment</h3>
                             <p class="portfolio-type">Marketing</p>
                         </div>
-
                     </li>
+
                     <li class="portfolio-four-sec">
                         <div class="overlay-card">
-                            <img class="portfolio-img" src="./images/maditation-app.jpg" alt="Meditation App"
-                                width="360">
+                            <img class="portfolio-img" srcset="./images/mobile-maditation-app.jpg 288w, 
+                                    ./images/tablet-maditation-app.jpg 356w, 
+                                    ./images/desktop-maditation-app.jpg 360w, 
+                                    ./images/mobile-maditation-app@2x.jpg 576w, 
+                                    ./images/tablet-maditation-app@2x.jpg 712w, 
+                                    ./images/desktop-maditation-app@2x.jpg 720w"
+                                src="./images/mobile-maditation-app.jpg" alt="Meditation App"
+                                sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px">
                             <p class="overlay">
                                 14 Stylish and User-Friendly App Design Concepts · Task Manager App
                                 · Calorie Tracker App
@@ -371,11 +389,18 @@
                             <h3 class="portfolio-info">Meditation App</h3>
                             <p class="portfolio-type">App</p>
                         </div>
-
                     </li>
+
                     <li class="portfolio-four-sec">
                         <div class="overlay-card">
-                            <img class="portfolio-img" src="./images/taxi-service.jpg" alt="Taxi Service" width="360">
+                            <img class="portfolio-img" srcset="./images/mobile-taxi-service.jpg 288w, 
+                                    ./images/tablet-taxi-service.jpg 356w, 
+                                    ./images/desktop-taxi-service.jpg 360w, 
+                                    ./images/mobile-taxi-service@2x.jpg 576w, 
+                                    ./images/tablet-taxi-service@2x.jpg 712w, 
+                                    ./images/desktop-taxi-service@2x.jpg 720w" src="./images/mobile-taxi-service.jpg"
+                                alt="Taxi Service"
+                                sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px">
                             <p class="overlay">
                                 14 Stylish and User-Friendly App Design Concepts · Task Manager App
                                 · Calorie Tracker App
@@ -389,12 +414,18 @@
                             <h3 class="portfolio-info">Taxi Service</h3>
                             <p class="portfolio-type">Marketing</p>
                         </div>
-
                     </li>
+
                     <li class="portfolio-four-sec">
                         <div class="overlay-card">
-                            <img class="portfolio-img" src="./images/screen-illustrations.jpg"
-                                alt="Screen Illustrations" width="360">
+                            <img class="portfolio-img" srcset="./images/mobile-screen-illustrations.jpg 288w, 
+                                    ./images/tablet-screen-illustrations.jpg 356w, 
+                                    ./images/desktop-screen-illustrations.jpg 360w, 
+                                    ./images/mobile-screen-illustrations@2x.jpg 576w, 
+                                    ./images/tablet-screen-illustrations@2x.jpg 712w, 
+                                    ./images/desktop-screen-illustrations@2x.jpg 720w"
+                                src="./images/mobile-screen-illustrations.jpg" alt="Screen Illustrations"
+                                sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px">
                             <p class="overlay">
                                 14 Stylish and User-Friendly App Design Concepts · Task Manager App
                                 · Calorie Tracker App
@@ -408,12 +439,18 @@
                             <h3 class="portfolio-info">Screen Illustrations</h3>
                             <p class="portfolio-type">Design</p>
                         </div>
-
                     </li>
+
                     <li class="portfolio-four-sec">
                         <div class="overlay-card">
-                            <img class="portfolio-img" src="./images/online-courses.jpg" alt="Online Courses"
-                                width="360">
+                            <img class="portfolio-img" srcset="./images/mobile-online-courses.jpg 288w, 
+                                    ./images/tablet-online-courses.jpg 356w, 
+                                    ./images/desktop-online-courses.jpg 360w, 
+                                    ./images/mobile-online-courses@2x.jpg 576w, 
+                                    ./images/tablet-online-courses@2x.jpg 712w, 
+                                    ./images/desktop-online-courses@2x.jpg 720w"
+                                src="./images/mobile-online-courses.jpg" alt="Online Courses"
+                                sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px">
                             <p class="overlay">
                                 14 Stylish and User-Friendly App Design Concepts · Task Manager App
                                 · Calorie Tracker App
@@ -427,11 +464,12 @@
                             <h3 class="portfolio-info">Online Courses</h3>
                             <p class="portfolio-type">Marketing</p>
                         </div>
-
                     </li>
                 </ul>
+
             </div>
-        </section> -->
+
+        </section>
 
     </main>
 
