--- a/index.html
+++ b/index.html
@@ -473,51 +473,54 @@
 
     </main>
 
-    <!-- <footer class="footer-section">
+    <footer class="footer-section">
         <div class="container footer-container">
 
-            <div class="footer-left-part">
-                <a class="logo-web-footer" href="./index.html">Web<span class="logo-studio-footer">Studio</span></a>
-                <p class="footer-text">
-                    Increase the flow of customers and sales for your business with digital marketing & growth
-                    solutions.
-                </p>
+            <div class="footer-tablet-info">
+                <div class="footer-left-part">
+                    <a class="logo-web-footer" href="./index.html">Web<span class="logo-studio-footer">Studio</span></a>
+                    <p class="footer-text">
+                        Increase the flow of customers and sales for your business with digital marketing & growth
+                        solutions.
+                    </p>
+                </div>
+
+                <div class="footer-right-part">
+                    <p class="footer-social-media-title">Social media</p>
+
+                    <ul class="footer-social-menu">
+                        <li class="footer-social-items">
+                            <a class="footer-link" href="">
+                                <svg class="footer-icons" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-social-items">
+                            <a class="footer-link" href="">
+                                <svg class="footer-icons" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-social-items">
+                            <a class="footer-link" href="">
+                                <svg class="footer-icons" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-social-items">
+                            <a class="footer-link" href="">
+                                <svg class="footer-icons" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
 
-            <div class="footer-right-part">
-                <p class="footer-social-media-title">Social media</p>
-
-                <ul class="footer-social-menu">
-                    <li class="footer-social-items">
-                        <a class="footer-link" href="">
-                            <svg class="footer-icons" width="24" height="24">
-                                <use href="./images/icons.svg#icon-instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-social-items">
-                        <a class="footer-link" href="">
-                            <svg class="footer-icons" width="24" height="24">
-                                <use href="./images/icons.svg#icon-twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-social-items">
-                        <a class="footer-link" href="">
-                            <svg class="footer-icons" width="24" height="24">
-                                <use href="./images/icons.svg#icon-facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-social-items">
-                        <a class="footer-link" href="">
-                            <svg class="footer-icons" width="24" height="24">
-                                <use href="./images/icons.svg#icon-linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
-            </div>
 
 
 
@@ -543,7 +546,9 @@
 
 
         </div>
-    </footer> -->
+    </footer>
+
+
     <!-- 
     <div class="modal-bg">
 
