--- a/index.html
+++ b/index.html
@@ -549,8 +549,8 @@
     </footer>
 
 
-    <!-- 
-    <div class="modal-bg">
+
+    <div class="modal-bg is-open">
 
         <div class="modal-window">
             <button type="button" class="modal-btn">
@@ -630,7 +630,7 @@
 
         </div>
 
-    </div> -->
+    </div>
 
 
 
